--- a/PZ_Projekt/Views/Home/Contact.cshtml
+++ b/PZ_Projekt/Views/Home/Contact.cshtml
@@ -4,15 +4,18 @@
 
 <div class="container">
     <h1 class="display-4">Kontakt</h1>
+    <!-- Sekcja z danymi kontaktowymi -->
     <p>Skontaktuj się z nami, używając poniższych danych kontaktowych:</p>
     <div class="row">
         <div class="col-md-6">
             <h3>PCParts</h3>
+            <!-- Adres firmy -->
             <p>
                 Adres: Ul. Przykładowa 123<br />
                 00-123 Miasto<br />
                 Polska
             </p>
+            <!-- Kontakt telefoniczny i emailowy -->
             <p>
                 Telefon: +48 123 456 789<br />
                 Email: kontakt@pcparts.pl
