--- a/PZ_Projekt/Views/Home/Products.cshtml
+++ b/PZ_Projekt/Views/Home/Products.cshtml
@@ -72,6 +72,7 @@
 </div>
 
 @section Scripts {
+    <!-- Skrypt obsługujący dodawanie produktów do koszyka -->
     <script>
         $(document).ready(function () {
             $('.addToCartButton').click(function () {
