--- a/PZ_Projekt/Views/Item/Create.cshtml
+++ b/PZ_Projekt/Views/Item/Create.cshtml
@@ -8,25 +8,29 @@
 
 <div class="row">
     <div class="col-md-4">
+        <!-- Formularz do tworzenia nowego produktu, wysyłający dane metodą POST z możliwością przesyłania plików -->
         <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <!-- Pole tekstowe dla nazwy produktu z walidacją -->
                 <label asp-for="Name" class="control-label">Nazwa</label>
                 <input asp-for="Name" class="form-control" placeholder="Maksymalna liczba znaków: 70" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-                
             </div>
             <div class="form-group">
+                <!-- Pole tekstowe dla opisu produktu z walidacją -->
                 <label asp-for="Description" class="control-label">Opis</label>
                 <input asp-for="Description" class="form-control" placeholder="Maksymalna liczba znaków: 1000" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <!-- Pole tekstowe dla ceny produktu z walidacją -->
                 <label asp-for="Price" class="control-label">Cena</label>
                 <input asp-for="Price" class="form-control" placeholder="Dostępny zakres 1-9999" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <!-- Pole wyboru dla kategorii produktu -->
                 <label asp-for="Category" class="control-label">Kategoria</label>
                 <select asp-for="Category" class="form-control">
                     <option value="GPU">GPU</option>
@@ -39,12 +43,13 @@
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <!-- Pole do przesyłania pliku obrazu dla produktu -->
                 <label asp-for="ImageFile" class="control-label">Zdjęcie</label>
                 <input asp-for="ImageFile" type="file" class="form-control" accept="image/*" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
-
             <div class="form-group">
+                <!-- Przycisk do przesłania formularza -->
                 <input type="submit" value="Utwórz" class="btn btn-primary" />
             </div>
         </form>
@@ -52,11 +57,13 @@
 </div>
 
 <div>
+    <!-- Link powrotu do listy produktów -->
     <a asp-action="Index">Powrót do Listy</a>
 </div>
 
 @section Scripts {
     @{
+        // Ładowanie skryptów walidacyjnych
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
