--- a/PZ_Projekt/Views/Item/Index.cshtml
+++ b/PZ_Projekt/Views/Item/Index.cshtml
@@ -1,14 +1,17 @@
 ﻿@model IEnumerable<PZ_Projekt.Models.Item>
 
 @{
-    ViewData["Title"] = "Lista Produktów";
+    ViewData["Title"] = "Lista Produktów"; // Ustawia tytuł strony na "Lista Produktów"
 }
 
 <h1>Lista Produktów</h1>
 
+<!-- Link do akcji Create, który pozwala dodać nowy produkt -->
 <p>
     <a asp-action="Create">Dodaj nowy</a>
 </p>
+
+<!-- Tabela wyświetlająca listę produktów -->
 <table class="table">
     <thead>
         <tr>
@@ -21,6 +24,7 @@
         </tr>
     </thead>
     <tbody>
+        <!-- Iteracja przez kolekcję produktów i wyświetlanie ich w wierszach tabeli -->
         @foreach (var item in Model)
         {
             <tr>
@@ -29,6 +33,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Price)</td>
                 <td>@Html.DisplayFor(modelItem => item.Category)</td>
                 <td><img src="@item.ImageUrl" alt="@item.Name" style="max-width: 100px; max-height: 100px;" /></td>
+                <!-- Linki do akcji Edytuj, Szczegóły i Usuń dla danego produktu -->
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edytuj</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a> |
