--- a/PZ_Projekt/Views/Order/MyOrders.cshtml
+++ b/PZ_Projekt/Views/Order/MyOrders.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<PZ_Projekt.Models.Order>
 
 @{
+    // Ustawienie tytułu strony
     ViewData["Title"] = "Moje Zamówienia";
 }
 
@@ -8,10 +9,12 @@
 
 @if (!Model.Any())
 {
+    // Wyświetlenie komunikatu, gdy użytkownik nie ma żadnych zamówień
     <p>Nie masz żadnych zamówień.</p>
 }
 else
 {
+    // Tabela wyświetlająca listę zamówień użytkownika
     <table class="table">
         <thead>
             <tr>
@@ -27,12 +30,13 @@ else
             @foreach (var order in Model)
             {
                 <tr>
-                    <td>@order.OrderDate</td>
-                    <td>@order.DeliveryMethod</td>
-                    <td>@order.Address</td>
-                    <td>@order.Status</td>
-                    <td>@order.OrderItems.Sum(item => item.Quantity * item.Item.Price).ToString("C")</td>
+                    <td>@order.OrderDate</td> <!-- Wyświetlanie daty zamówienia -->
+                    <td>@order.DeliveryMethod</td> <!-- Wyświetlanie metody dostawy -->
+                    <td>@order.Address</td> <!-- Wyświetlanie adresu dostawy -->
+                    <td>@order.Status</td> <!-- Wyświetlanie statusu zamówienia -->
+                    <td>@order.OrderItems.Sum(item => item.Quantity * item.Item.Price).ToString("C")</td> <!-- Wyświetlanie sumy zamówienia -->
                     <td>
+                        <!-- Link do szczegółów zamówienia -->
                         <a asp-controller="Order" asp-action="OrderConfirmation" asp-route-orderId="@order.Id" class="btn btn-info">Szczegóły</a>
                     </td>
                 </tr>
